# llm-zoomcamp-knowledge-base

./: .gitignore  README.md
docs/: working-with-uv.md
homework1/: README.md  pyproject.toml
homework1/notebook/: homework1_answers.ipynb
homework2/: README.md  pyproject.toml
homework2/notebook/: homework2_answers.ipynb
homework3/: README.md  pyproject.toml
homework3/notebook/: homework3_answers.ipynb
hw_workshop1/: README.md  pyproject.toml
hw_workshop1/notebook/: hw_workshop1_answers.ipynb
hw_workshop2/: README.md  pyproject.toml
hw_workshop2/notebook/: hw_workshop2_answers.ipynb  weather_server.py
week1/: README.md  pyproject.toml
week1/notebook/: llm_api_examples_gemini_openai.ipynb
week2/: README.md  docker-compose.yml  pyproject.toml
week2/notebook/: 0_quickstart.ipynb  1_use_fastembed.ipynb  2_sematic_search.ipynb  3_rag_and_qdrant.ipynb  4_hybrid_search.ipynb  5_rag_and_qdrant-hybrid_search.ipynb
week3/: README.md  pyproject.toml
week3/notebook/: evaluate-text.ipynb  ground-truth-data.ipynb  offline-rag-evaluation.ipynb
week3/raw/: notas.md
workshop1/: README.md  pyproject.toml
workshop1/notebook/: cognee_simple_demo.ipynb  dlt_and_cognee_taxi_dataset.ipynb  understanding_paraguays_constitution_with_cognee.ipynb  using_cognee.ipynb  using_kuzu.ipynb  using_neo4j.ipynb
workshop2/: README.md  pyproject.toml
workshop2/notebook/: 0_from_rag_to_agents.ipynb  agentic_rag.ipynb  agentic_search.ipynb  function_calling.ipynb  understanding_chat_assistant.ipynb  using_mcp.ipynb  using_mcp_with_pydanticai.ipynb  using_mcp_with_pydanticai_part_1.ipynb  using_mcp_with_pydanticai_part_2.ipynb  using_mcp_with_pydanticai_part_3.ipynb  using_pydanticai.ipynb
workshop2/notebook/mcp/: mcp_client_run_python.py  mcp_client_run_python_2.py  mcp_client_run_python_3.py  mcp_client_run_python_4.py  mcp_client_run_python_5.py  mcp_client_weather.py  mcp_cliente_tutor.py  mcp_server.py  mcp_weather.py  streamable_http_server.py
workshop2/raw/: notas.md
