[project]
name = "homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch==8.17.0",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.3",
    "openai>=1.86.0",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
