[project]
name = "week1"
version = "0.1.0"
description = "Entorno de trabajo independiente para ejemplos y experimentos relacionados con LLMs y RAG."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.0.1",
    "google-genai>=1.19.0",
    "ipywidgets>=8.1.7",
    "minsearch>=0.0.2",
    "notebook>=7.4.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]