[project]
name = "week2"
version = "0.1.0"
description = "Entorno de trabajo independiente para ejemplos y experimentos relacionados con LLMs, RAG y búsqueda semántica."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.7.1",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.3",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "qdrant-client>=1.14.3",
]
