[project]
name = "week3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.0.2",
    "ipywidgets>=8.1.7",
    "minsearch>=0.0.4",
    "notebook>=7.4.4",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
