[project]
name = "workshop1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cognee>=0.2.0",
    "dlt[duckdb]>=1.12.3",
    "google-genai>=1.25.0",
    "google-generativeai>=0.8.5",
    "ipywidgets>=8.1.7",
    "kuzu>=0.9.0",
    "neo4j>=5.28.1",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
